--- a/ClientApp/src/index.generated.css
+++ b/ClientApp/src/index.generated.css
@@ -417,6 +417,39 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.container {
+  width: 100%;
+}
+@media (min-width: 640px) {
+
+  .container {
+    max-width: 640px;
+  }
+}
+@media (min-width: 768px) {
+
+  .container {
+    max-width: 768px;
+  }
+}
+@media (min-width: 1024px) {
+
+  .container {
+    max-width: 1024px;
+  }
+}
+@media (min-width: 1280px) {
+
+  .container {
+    max-width: 1280px;
+  }
+}
+@media (min-width: 1536px) {
+
+  .container {
+    max-width: 1536px;
+  }
+}
 .sr-only {
   position: absolute !important;
   width: 1px !important;
@@ -458,6 +491,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .z-50 {
   z-index: 50 !important;
 }
+.z-20 {
+  z-index: 20 !important;
+}
+.m-auto {
+  margin: auto !important;
+}
 .mx-auto {
   margin-left: auto !important;
   margin-right: auto !important;
@@ -465,6 +504,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-mx-4 {
   margin-left: -1rem !important;
   margin-right: -1rem !important;
+}
+.my-12 {
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
 }
 .-mx-2 {
   margin-left: -0.5rem !important;
@@ -497,6 +540,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-6 {
   margin-bottom: 1.5rem !important;
+}
+.mt-4 {
+  margin-top: 1rem !important;
+}
+.mr-4 {
+  margin-right: 1rem !important;
+}
+.mt-6 {
+  margin-top: 1.5rem !important;
+}
+.mb-16 {
+  margin-bottom: 4rem !important;
 }
 .mb-12 {
   margin-bottom: 3rem !important;
@@ -567,6 +622,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[160px\] {
   max-width: 160px !important;
 }
+.max-w-2xl {
+  max-width: 42rem !important;
+}
+.max-w-xs {
+  max-width: 20rem !important;
+}
+.flex-1 {
+  flex: 1 1 0% !important;
+}
 .flex-shrink-0 {
   flex-shrink: 0 !important;
 }
@@ -632,6 +696,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .overflow-hidden {
   overflow: hidden !important;
 }
+.overflow-y-auto {
+  overflow-y: auto !important;
+}
+.overflow-x-hidden {
+  overflow-x: hidden !important;
+}
 .rounded-md {
   border-radius: 0.375rem !important;
 }
@@ -647,6 +717,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-4 {
   border-width: 4px !important;
 }
+.border-2 {
+  border-width: 2px !important;
+}
+.border-b {
+  border-bottom-width: 1px !important;
+}
 .border-gray-300 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
@@ -658,6 +734,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-\[\#006bef\] {
   --tw-border-opacity: 1 !important;
   border-color: rgb(0 107 239 / var(--tw-border-opacity)) !important;
+}
+.border-transparent {
+  border-color: transparent !important;
+}
+.border-gray-800 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(31 41 55 / var(--tw-border-opacity)) !important;
 }
 .bg-white {
   --tw-bg-opacity: 1 !important;
@@ -679,6 +762,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1 !important;
   background-color: rgb(0 123 255 / var(--tw-bg-opacity)) !important;
 }
+.bg-gray-800 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity)) !important;
+}
+.bg-transparent {
+  background-color: transparent !important;
+}
 .bg-\[\#5865F2\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(88 101 242 / var(--tw-bg-opacity)) !important;
@@ -688,6 +778,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .p-2 {
   padding: 0.5rem !important;
+}
+.p-6 {
+  padding: 1.5rem !important;
+}
+.p-8 {
+  padding: 2rem !important;
 }
 .py-4 {
   padding-top: 1rem !important;
@@ -733,6 +829,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 1.25rem !important;
   padding-right: 1.25rem !important;
 }
+.px-6 {
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+}
+.py-8 {
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
+}
 .pt-4 {
   padding-top: 1rem !important;
 }
@@ -771,11 +875,39 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1.875rem !important;
   line-height: 2.25rem !important;
 }
+.text-4xl {
+  font-size: 2.25rem !important;
+  line-height: 2.5rem !important;
+}
 .font-medium {
   font-weight: 500 !important;
 }
 .font-bold {
   font-weight: 700 !important;
+}
+.font-light {
+  font-weight: 300 !important;
+}
+.font-semibold {
+  font-weight: 600 !important;
+}
+.font-extrabold {
+  font-weight: 800 !important;
+}
+.uppercase {
+  text-transform: uppercase !important;
+}
+.leading-8 {
+  line-height: 2rem !important;
+}
+.leading-loose {
+  line-height: 2 !important;
+}
+.tracking-wide {
+  letter-spacing: 0.025em !important;
+}
+.tracking-tight {
+  letter-spacing: -0.025em !important;
 }
 .text-gray-800 {
   --tw-text-opacity: 1 !important;
@@ -804,6 +936,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-\[\#adadad\] {
   --tw-text-opacity: 1 !important;
   color: rgb(173 173 173 / var(--tw-text-opacity)) !important;
+}
+.text-gray-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(107 114 128 / var(--tw-text-opacity)) !important;
+}
+.text-indigo-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(79 70 229 / var(--tw-text-opacity)) !important;
+}
+.text-gray-900 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
+}
+.text-indigo-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(99 102 241 / var(--tw-text-opacity)) !important;
 }
 .underline {
   -webkit-text-decoration-line: underline !important;
@@ -883,6 +1031,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1 !important;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
 }
+.hover\:bg-gray-900:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity)) !important;
+}
+.hover\:bg-gray-800:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity)) !important;
+}
 .hover\:bg-opacity-90:hover {
   --tw-bg-opacity: 0.9 !important;
 }
@@ -901,6 +1057,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
+}
+.hover\:text-white:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline !important;
@@ -957,6 +1117,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1 !important;
   color: rgb(243 244 246 / var(--tw-text-opacity)) !important;
 }
+.dark .dark\:text-gray-200 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(229 231 235 / var(--tw-text-opacity)) !important;
+}
 .dark .dark\:hover\:bg-gray-500:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity)) !important;
@@ -980,6 +1144,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-left: 3rem !important;
     padding-right: 3rem !important;
   }
+
+  .sm\:text-5xl {
+    font-size: 3rem !important;
+    line-height: 1 !important;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem !important;
+    line-height: 2.5rem !important;
+  }
 }
 @media (min-width: 768px) {
 
@@ -999,10 +1173,22 @@ Ensure the default browser behavior of the `hidden` attribute.
     display: none !important;
   }
 
+  .md\:w-1\/2 {
+    width: 50% !important;
+  }
+
   .md\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0 !important;
     margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse))) !important;
     margin-bottom: calc(1rem * var(--tw-space-y-reverse)) !important;
+  }
+
+  .md\:border-r {
+    border-right-width: 1px !important;
+  }
+
+  .md\:border-b-0 {
+    border-bottom-width: 0px !important;
   }
 
   .md\:px-\[60px\] {
@@ -1014,5 +1200,21 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:w-full {
     width: 100% !important;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333% !important;
+  }
+
+  .lg\:border-r {
+    border-right-width: 1px !important;
+  }
+
+  .lg\:border-r-0 {
+    border-right-width: 0px !important;
+  }
+
+  .lg\:border-b-0 {
+    border-bottom-width: 0px !important;
   }
 }
