--- a/ClientApp/src/index.generated.css
+++ b/ClientApp/src/index.generated.css
@@ -461,6 +461,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   white-space: nowrap !important;
   border-width: 0 !important;
 }
+.pointer-events-none {
+  pointer-events: none !important;
+}
 .visible {
   visibility: visible !important;
 }
@@ -475,6 +478,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .right-0 {
   right: 0px !important;
+}
+.right-2 {
+  right: 0.5rem !important;
+}
+.bottom-3 {
+  bottom: 0.75rem !important;
+}
+.-bottom-6 {
+  bottom: -1.5rem !important;
 }
 .right-4 {
   right: 1rem !important;
@@ -499,6 +511,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .z-20 {
   z-index: 20 !important;
+}
+.col-span-3 {
+  grid-column: span 3 / span 3 !important;
 }
 .m-auto {
   margin: auto !important;
@@ -539,6 +554,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-2 {
   margin-top: 0.5rem !important;
 }
+.mt-3 {
+  margin-top: 0.75rem !important;
+}
 .mb-10 {
   margin-bottom: 2.5rem !important;
 }
@@ -569,6 +587,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .inline-flex {
   display: inline-flex !important;
 }
+.grid {
+  display: grid !important;
+}
 .hidden {
   display: none !important;
 }
@@ -586,6 +607,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .h-4 {
   height: 1rem !important;
+}
+.h-1 {
+  height: 0.25rem !important;
 }
 .h-6 {
   height: 1.5rem !important;
@@ -648,6 +672,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   -webkit-appearance: none !important;
           appearance: none !important;
 }
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr)) !important;
+}
 .flex-col {
   flex-direction: column !important;
 }
@@ -668,6 +695,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .justify-between {
   justify-content: space-between !important;
+}
+.gap-4 {
+  gap: 1rem !important;
 }
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0 !important;
@@ -706,6 +736,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-lg {
   border-radius: 0.5rem !important;
 }
+.rounded {
+  border-radius: 0.25rem !important;
+}
+.rounded-l-md {
+  border-top-left-radius: 0.375rem !important;
+  border-bottom-left-radius: 0.375rem !important;
+}
+.rounded-r-lg {
+  border-top-right-radius: 0.5rem !important;
+  border-bottom-right-radius: 0.5rem !important;
+}
 .border {
   border-width: 1px !important;
 }
@@ -718,6 +759,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-t {
   border-top-width: 1px !important;
 }
+.border-l {
+  border-left-width: 1px !important;
+}
 .border-b {
   border-bottom-width: 1px !important;
 }
@@ -729,6 +773,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1 !important;
   border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
 }
+.border-transparent {
+  border-color: transparent !important;
+}
 .border-\[\#E9EDF4\] {
   --tw-border-opacity: 1 !important;
   border-color: rgb(233 237 244 / var(--tw-border-opacity)) !important;
@@ -736,9 +783,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-\[\#006bef\] {
   --tw-border-opacity: 1 !important;
   border-color: rgb(0 107 239 / var(--tw-border-opacity)) !important;
-}
-.border-transparent {
-  border-color: transparent !important;
 }
 .border-gray-800 {
   --tw-border-opacity: 1 !important;
@@ -755,6 +799,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-gray-50 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
+}
+.bg-green-500 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity)) !important;
+}
+.bg-gray-200 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity)) !important;
 }
 .bg-gray-300 {
   --tw-bg-opacity: 1 !important;
@@ -942,9 +994,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1 !important;
   color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
 }
+.text-red-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(239 68 68 / var(--tw-text-opacity)) !important;
+}
+.text-green-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(34 197 94 / var(--tw-text-opacity)) !important;
+}
 .text-black {
   --tw-text-opacity: 1 !important;
   color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
+}
+.text-\[\#ED4A50\] {
+  --tw-text-opacity: 1 !important;
+  color: rgb(237 74 80 / var(--tw-text-opacity)) !important;
 }
 .text-white {
   --tw-text-opacity: 1 !important;
@@ -962,9 +1026,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1 !important;
   color: rgb(99 102 241 / var(--tw-text-opacity)) !important;
 }
-.text-\[\#ED4A50\] {
-  --tw-text-opacity: 1 !important;
-  color: rgb(237 74 80 / var(--tw-text-opacity)) !important;
+.placeholder-gray-400::-webkit-input-placeholder {
+  --tw-placeholder-opacity: 1 !important;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity)) !important;
+}
+.placeholder-gray-400::placeholder {
+  --tw-placeholder-opacity: 1 !important;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity)) !important;
 }
 .placeholder-\[\#ACB6BE\]::-webkit-input-placeholder {
   --tw-placeholder-opacity: 1 !important;
@@ -973,6 +1041,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .placeholder-\[\#ACB6BE\]::placeholder {
   --tw-placeholder-opacity: 1 !important;
   color: rgb(172 182 190 / var(--tw-placeholder-opacity)) !important;
+}
+.opacity-50 {
+  opacity: 0.5 !important;
 }
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1) !important;
@@ -998,9 +1069,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
 }
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
+}
 .ring-black {
   --tw-ring-opacity: 1 !important;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity)) !important;
+}
+.ring-red-500 {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity)) !important;
 }
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05 !important;
@@ -1140,6 +1220,10 @@ Ensure the default browser behavior of the `hidden` attribute.
           text-decoration-line: underline !important;
 }
 
+.focus\:border-transparent:focus {
+  border-color: transparent !important;
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent !important;
   outline-offset: 2px !important;
@@ -1159,6 +1243,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .focus\:ring-gray-500:focus {
   --tw-ring-opacity: 1 !important;
   --tw-ring-color: rgb(107 114 128 / var(--tw-ring-opacity)) !important;
+}
+
+.focus\:ring-purple-600:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(147 51 234 / var(--tw-ring-opacity)) !important;
 }
 
 .focus\:ring-offset-2:focus {
