--- a/ClientApp/src/index.generated.css
+++ b/ClientApp/src/index.generated.css
@@ -530,6 +530,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 3rem !important;
   margin-bottom: 3rem !important;
 }
+.my-2 {
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
+}
+.my-4 {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
 .ml-10 {
   margin-left: 2.5rem !important;
 }
@@ -575,6 +583,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mb-2 {
   margin-bottom: 0.5rem !important;
 }
+.mt-8 {
+  margin-top: 2rem !important;
+}
 .block {
   display: block !important;
 }
@@ -608,6 +619,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-4 {
   height: 1rem !important;
 }
+.h-12 {
+  height: 3rem !important;
+}
 .h-1 {
   height: 0.25rem !important;
 }
@@ -619,6 +633,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-8 {
   width: 2rem !important;
+}
+.w-12 {
+  width: 3rem !important;
 }
 .w-56 {
   width: 14rem !important;
@@ -647,6 +664,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-xs {
   max-width: 20rem !important;
 }
+.max-w-md {
+  max-width: 28rem !important;
+}
 .flex-1 {
   flex: 1 1 0% !important;
 }
@@ -660,6 +680,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .transform {
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+}
+.cursor-not-allowed {
+  cursor: not-allowed !important;
 }
 .cursor-pointer {
   cursor: pointer !important;
@@ -796,13 +819,41 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1 !important;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
 }
-.bg-gray-50 {
+.bg-gray-600 {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity)) !important;
+}
+.bg-red-600 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity)) !important;
+}
+.bg-yellow-600 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(202 138 4 / var(--tw-bg-opacity)) !important;
 }
 .bg-green-500 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity)) !important;
+}
+.bg-blue-600 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity)) !important;
+}
+.bg-indigo-600 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity)) !important;
+}
+.bg-purple-600 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(147 51 234 / var(--tw-bg-opacity)) !important;
+}
+.bg-pink-600 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(219 39 119 / var(--tw-bg-opacity)) !important;
+}
+.bg-gray-50 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
 }
 .bg-gray-200 {
   --tw-bg-opacity: 1 !important;
@@ -863,6 +914,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0.5rem !important;
   padding-right: 0.5rem !important;
 }
+.px-6 {
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+}
 .py-5 {
   padding-top: 1.25rem !important;
   padding-bottom: 1.25rem !important;
@@ -886,10 +941,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-5 {
   padding-left: 1.25rem !important;
   padding-right: 1.25rem !important;
-}
-.px-6 {
-  padding-left: 1.5rem !important;
-  padding-right: 1.5rem !important;
 }
 .py-8 {
   padding-top: 2rem !important;
@@ -946,11 +997,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .font-medium {
   font-weight: 500 !important;
 }
-.font-light {
-  font-weight: 300 !important;
-}
 .font-semibold {
   font-weight: 600 !important;
+}
+.font-light {
+  font-weight: 300 !important;
 }
 .font-extrabold {
   font-weight: 800 !important;
@@ -986,6 +1037,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1 !important;
   color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
 }
+.text-indigo-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(99 102 241 / var(--tw-text-opacity)) !important;
+}
+.text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
 .text-gray-500 {
   --tw-text-opacity: 1 !important;
   color: rgb(107 114 128 / var(--tw-text-opacity)) !important;
@@ -1010,10 +1069,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1 !important;
   color: rgb(237 74 80 / var(--tw-text-opacity)) !important;
 }
-.text-white {
-  --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
-}
 .text-\[\#adadad\] {
   --tw-text-opacity: 1 !important;
   color: rgb(173 173 173 / var(--tw-text-opacity)) !important;
@@ -1021,10 +1076,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-indigo-600 {
   --tw-text-opacity: 1 !important;
   color: rgb(79 70 229 / var(--tw-text-opacity)) !important;
-}
-.text-indigo-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(99 102 241 / var(--tw-text-opacity)) !important;
 }
 .placeholder-gray-400::-webkit-input-placeholder {
   --tw-placeholder-opacity: 1 !important;
@@ -1042,12 +1093,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-placeholder-opacity: 1 !important;
   color: rgb(172 182 190 / var(--tw-placeholder-opacity)) !important;
 }
+.opacity-70 {
+  opacity: 0.7 !important;
+}
 .opacity-50 {
   opacity: 0.5 !important;
 }
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1) !important;
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1) !important;
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color) !important;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 .shadow-sm {
@@ -1171,6 +1230,46 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
 }
 
+.hover\:bg-gray-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-red-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-yellow-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(161 98 7 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-green-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-indigo-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-purple-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(126 34 206 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-pink-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(190 24 93 / var(--tw-bg-opacity)) !important;
+}
+
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
@@ -1240,9 +1339,44 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity)) !important;
 }
 
+.focus\:ring-indigo-500:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity)) !important;
+}
+
 .focus\:ring-gray-500:focus {
   --tw-ring-opacity: 1 !important;
   --tw-ring-color: rgb(107 114 128 / var(--tw-ring-opacity)) !important;
+}
+
+.focus\:ring-red-500:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity)) !important;
+}
+
+.focus\:ring-yellow-500:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(234 179 8 / var(--tw-ring-opacity)) !important;
+}
+
+.focus\:ring-green-500:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(34 197 94 / var(--tw-ring-opacity)) !important;
+}
+
+.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity)) !important;
+}
+
+.focus\:ring-purple-500:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(168 85 247 / var(--tw-ring-opacity)) !important;
+}
+
+.focus\:ring-pink-500:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(236 72 153 / var(--tw-ring-opacity)) !important;
 }
 
 .focus\:ring-purple-600:focus {
@@ -1256,6 +1390,38 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .focus\:ring-offset-gray-800:focus {
   --tw-ring-offset-color: #1f2937 !important;
+}
+
+.focus\:ring-offset-indigo-200:focus {
+  --tw-ring-offset-color: #c7d2fe !important;
+}
+
+.focus\:ring-offset-gray-200:focus {
+  --tw-ring-offset-color: #e5e7eb !important;
+}
+
+.focus\:ring-offset-red-200:focus {
+  --tw-ring-offset-color: #fecaca !important;
+}
+
+.focus\:ring-offset-yellow-200:focus {
+  --tw-ring-offset-color: #fef08a !important;
+}
+
+.focus\:ring-offset-green-200:focus {
+  --tw-ring-offset-color: #bbf7d0 !important;
+}
+
+.focus\:ring-offset-blue-200:focus {
+  --tw-ring-offset-color: #bfdbfe !important;
+}
+
+.focus\:ring-offset-purple-200:focus {
+  --tw-ring-offset-color: #e9d5ff !important;
+}
+
+.focus\:ring-offset-pink-200:focus {
+  --tw-ring-offset-color: #fbcfe8 !important;
 }
 
 .focus\:ring-offset-gray-100:focus {
@@ -1410,6 +1576,11 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-left: 60px !important;
     padding-right: 60px !important;
   }
+
+  .md\:px-8 {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1432,5 +1603,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:border-b-0 {
     border-bottom-width: 0px !important;
+  }
+
+  .lg\:px-10 {
+    padding-left: 2.5rem !important;
+    padding-right: 2.5rem !important;
   }
 }
