--- a/ClientApp/src/index.generated.css
+++ b/ClientApp/src/index.generated.css
@@ -522,6 +522,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: auto !important;
   margin-right: auto !important;
 }
+.my-2 {
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
+}
 .-mx-4 {
   margin-left: -1rem !important;
   margin-right: -1rem !important;
@@ -529,10 +533,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .my-12 {
   margin-top: 3rem !important;
   margin-bottom: 3rem !important;
-}
-.my-2 {
-  margin-top: 0.5rem !important;
-  margin-bottom: 0.5rem !important;
 }
 .my-4 {
   margin-top: 1rem !important;
@@ -788,13 +788,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-b {
   border-bottom-width: 1px !important;
 }
-.border-gray-200 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity)) !important;
-}
 .border-gray-300 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
+}
+.border-gray-200 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity)) !important;
 }
 .border-transparent {
   border-color: transparent !important;
@@ -1432,6 +1432,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow: 0 0 #0000 !important;
   --tw-shadow-colored: 0 0 #0000 !important;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+.dark .dark\:border-none {
+  border-style: none !important;
 }
 
 .dark .dark\:border-black {
